# CredMan

./: .gitignore  Makefile  README.md  TODO.md  bash_completions.sh  cman  compile_commands.json  cred_manager  cred_manager.c  creds.txt  meson.build  meson.options  out.txt  secure  secure.c  secure.h  test.txt
config/: db.conf
include/: account.h  argparser.h  client_main.h  commands.h  db_access.h  error_messages.h  util.h
include/commands/: acc_mgmt.h  api_mgmt.h  runners.h
include/db/: acc_access.h  api_access.h  general.h
include/objects/: acc_obj.h  api_obj.h
include/util/: argparser.h  errors.h  input.h  output.h  passwd_gen.h
includes/: account.h  client_main.h  database.h  db_access.h  db_structures.h  error_messages.h  main.h  secure.h  server_networking.h  util.h
src/: account.c  argparser.c  client_main.c  commands.c  cred_manager.c  database.c  db_access.c  db_structures.c  main.c  secure.c  server_main.c  server_networking.c  temp.txt  test  test.c  util.c
src/commands/: acc_mgmt.c  api_mgmt.c  runners.c
src/db/: acc_access.c  api_access.c  general.c
src/objects/: acc_obj.c  api_obj.c
src/util/: argparser.c  input.c  output.c  passwd_gen.c
util/: clean  clean.c  creds.txt  decrypt  decrypt.c  dout.txt  encrypt  encrypt.c  main.h  schema.sql
